# quantmllibrary

./: .gitignore  ALPHA_GUIDE.md  LICENSE  MANIFEST.in  README.md  act_res.txt  act_res_2.txt  act_v_res.txt  activations_debug.txt  activations_fail.txt  activations_res.txt  adam_fail.txt  adam_res_2.txt  all_tests_final.txt  all_tests_final_2.txt  all_tests_res.txt  collected_opts.txt  debug_activations.py  debug_tests.py  environment.yml  failures.txt  final_metrics.py  final_verification.txt  full_debug_output.txt  impressive_res.txt  leaky_debug.txt  leaky_fail.txt  leaky_single.txt  mse_debug.txt  mse_debug_2.txt  opts_res_2.txt  pyproject.toml  radam_res.txt  radam_res_2.txt  requirements-dev.txt  requirements.txt  setup.cfg  test_output.txt  test_v.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  pypi-publish.yml
benchmarks/: benchmark_comparison.py  benchmark_impressive.py  benchmark_memory.py  benchmark_metrics.py  benchmark_ops.py  benchmark_training.py  detailed_ops_benchmark.py
configs/: base.yaml
configs/experiments/: multi_instrument.yaml  overnight_gap.yaml
configs/instruments/: ES.yaml  MES.yaml  MNQ.yaml  NQ.yaml
docs/: benchmark_results.md  feature_formulas.md  features.md
examples/: alpha_factors.py  alpha_training.py  backtest_strategy.py  config_example.yaml  futures_model.py  live_alpha_generator.py  online_regression.py  production_alpha.py  quick_alpha.py  streaming_training.py  walk_forward_training.py
quantml/: __init__.py  autograd.py  functional.py  online.py  ops.py  streaming.py  tensor.py  time_series.py
quantml/cli/: __init__.py  run_experiment.py
quantml/config/: __init__.py  config.py
quantml/data/: __init__.py  cache.py  feature_store.py  futures.py  loaders.py  memory_optimizer.py  validators.py
quantml/experiments/: __init__.py  logger.py  results.py  tracker.py
quantml/features/: __init__.py  base.py  gap_features.py  registry.py  volatility_features.py  volume_features.py
quantml/models/: __init__.py  attention.py  dropout.py  gru.py  linear.py  lstm.py  mlp.py  normalization.py  rnn.py  tcn.py
quantml/optim/: __init__.py  adafactor.py  adagrad.py  adam.py  lookahead.py  quant_optimizer.py  radam.py  rmsprop.py  schedulers.py  sgd.py
quantml/training/: __init__.py  alpha_eval.py  backtest.py  backtest_analysis.py  cv.py  data_loader.py  ensemble.py  feature_importance.py  features.py  futures_backtest.py  gradient_clipping.py  losses.py  lr_finder.py  metrics.py  regularization.py  trainer.py  walk_forward.py
quantml/utils/: __init__.py  gradient_check.py  logging.py  ops_cpu.py  profiling.py  reproducibility.py  serialization.py
scripts/: profile_pipeline.py  run_experiment.py
tests/: __init__.py  conftest.py  test_activations.py  test_attention_autograd.py  test_claims.py  test_data.py  test_features.py  test_futures_data.py  test_gradient_check.py  test_impressive.py  test_leakage.py  test_losses.py  test_models.py  test_ops.py  test_optimizers.py  test_tensor.py  test_training.py
tests/integration/: __init__.py  test_backtest.py  test_pipeline.py
