[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantml"
version = "0.1.0"
description = "A clean, minimal ML library optimized for quantitative trading, streaming data, and online learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "QuantML Contributors"}
]
keywords = [
    "machine-learning",
    "quantitative-trading",
    "streaming-data",
    "online-learning",
    "autograd",
    "tensor",
    "hft",
    "quant"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/quantml/quantml"
Documentation = "https://github.com/quantml/quantml#readme"
Repository = "https://github.com/quantml/quantml"
Issues = "https://github.com/quantml/quantml/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantml*"]

[tool.setuptools.package-data]
quantml = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

