[metadata]
name = quantml
description = A clean, minimal ML library optimized for quantitative trading
author = QuantML Contributors
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0; extra == "numpy"

[options.extras_require]
numpy = numpy>=1.20.0
dev = 
    pytest>=7.0.0
    black>=22.0.0
    mypy>=0.950

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --strict-markers
    --cov=quantml
    --cov-report=term-missing
    --cov-report=html

